# BaseNotes

./: LICENSE  Latex数学符号.md  README.md  git的超简单用法（以test-repository为例）.md
c++/c++Progect/JavaGCinCpp/: .gitignore  CMakeLists.txt  Gabage.cpp  Gabage.h  MemBlock.cpp  MemBlock.h  main.cpp
c++/c++Progect/JavaGCinCpp/bean/: Object.cpp  Object.h
c++/c++Progect/JavaGCinCpp/mem/: AllocMem.cpp  PointCollector.h
c++/c++Progect/JavaGCinCpp/mem_alloc/: AllocMem.cpp  AllocMem.h  PointCollector.cpp
c++/c++Progect/JavaGCinCpp/tools/: printer.hpp
c++/c++Progect/OperatorSystem/: .gitignore  CMakeLists.txt  TestMain.cpp
c++/c++Progect/OperatorSystem/exp2/: ProcessPipeMain.cpp  ProcessStartMain.cpp
c++/c++Progect/OperatorSystem/exp3/: ProducerConsumerMain.cpp
c++/c++Progect/OperatorSystem/exp4/: BankAlgorithmMain.cpp  (+1 more)
rust/learn_rust/: Cargo.toml  Makefile  learn.md
rust/learn_rust/attribute/: Cargo.toml
rust/learn_rust/book_mod/: Cargo.toml
rust/learn_rust/control/: Cargo.toml
rust/learn_rust/crates/: Cargo.toml
rust/learn_rust/csv_challenge/: Cargo.toml
rust/learn_rust/error_handle/: Cargo.toml
rust/learn_rust/function/: Cargo.toml
rust/learn_rust/generic/: Cargo.toml
rust/learn_rust/hello_world/: Cargo.toml
rust/learn_rust/macro_test/: Cargo.toml
rust/learn_rust/misc/: Cargo.toml
rust/learn_rust/mod_test/: Cargo.toml
rust/learn_rust/scope_rules/: Cargo.toml
rust/learn_rust/self_types/: Cargo.toml
rust/learn_rust/std/: Cargo.toml
rust/learn_rust/std_ext/: Cargo.toml
rust/learn_rust/test_test/: Cargo.toml  hello.txt
rust/learn_rust/trait_test/: Cargo.toml
rust/learn_rust/types/: Cargo.toml
rust/learn_rust/variable_bind/: Cargo.toml
rust/learn_rust/variable_cast/: Cargo.toml
(+1369 files in other folders)
